# tansu2

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  EDITOR.md  LOGGING-TODO.md  Makefile  OPTIMIZATIONS.md  PLAN.md  TODO.md  V2.md  deny.toml  knip.config.ts  oxfmt.config.mjs  oxlint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts  vitest.e2e.config.ts
.github/workflows/: build-server.yml  ci.yml
bench/: budgets.json  integrated-bench.mjs  note-cache-bench.mjs
docker/: linux-musl.Dockerfile
docs/: api.md  architecture.md  browser-support.md  development.md  editor.md  fixtures.md  logging.md  migration.md  performance.md
scripts/: build-sqlite-static.sh  build-web.mjs  import-html.ts  install-playwright-browsers.mjs  test-fixture.mjs
src/: api.rs  api_types.rs  app.rs  catalog.rs  config.rs  history.rs  http.rs  lib.rs  logging.rs  main.rs  paths.rs  reconcile.rs  search.rs  tags.rs  vault.rs
tests/fixtures/test-vaults/vault-one/: 2020-05-22-lam-research-lrcx-dry-deposit-and.md  2020-05-22-mediatek-stands-to-gain-the-most.md  2020-05-22-moores-law-is-dead-for-dram-and-that.md  2020-08-21-jensen-huangs-vision-for-data-center.md  2020-10-25-qualcomm-lost-the-iphone-12-mmwave.md  2020-10-27-apples-a14-packs-134-million-transistorsmm.md  2021-04-05-coming-soon.md  2021-04-29-trailing-edge-is-going-gangbusters.md  2021-05-11-semi-supply-chain-cutting-expectations.md  2021-05-27-nvidia-is-raking-in-the-money-but.md  2021-06-02-google-new-custom-silicon-replaces.md  2021-06-11-intels-trojan-horse-into-the-foundry.md  2021-06-17-qualcomm-hits-a-homerun-ai-100-powerful.md  2021-06-21-globalfoundries-is-a-leading-edge.md  2021-06-22-rockley-photonics-will-revolutionize.md  2021-06-23-morgan-stanley-just-reduced-tsmcs.md  2021-06-25-tenstorrent-wormhole-analysis-a-scale.md  2021-06-29-qualcomm-mwc-2021-network-infrastructure.md  2021-06-29-samsung-foundry-3nm-gate-all-around.md  2021-06-30-cerebras-wafer-scale-hardware-crushes.md  2021-06-30-micron-sells-3d-x-point-lehi-utah.md  2021-07-01-graphcore-looks-like-a-complete-failure.md  2021-07-06-nvidias-2021-bubble-eerily-similar.md  2021-07-28-mediatek-officially-enters-the-flagship.md  2021-07-29-intel-grossly-exaggerates-foundry.md  (+285 more)
web/: index.html
web/static/: app.css
web/ts/: api.test.ts  api.ts  app.test.ts  app.ts  dev-log.test.ts  dev-log.ts  dom.ts  html-import.test.ts  html-import.ts  html-importer.ts  main.ts  markdown-tags.test.ts  markdown-tags.ts  note-cache.test.ts  note-cache.ts  performance.test.ts  performance.ts  save-delta.test.ts  save-delta.ts  state.test.ts  state.ts  types.generated.ts  view.test.ts  view.ts
web/ts/app/: commands.ts  events.ts  services.ts
web/ts/e2e/: server.test.ts
web/ts/editor/: constants.ts  editor-block-selection.ts  editor-dom.ts  editor-image-resize.ts  editor-model.ts  editor-normalize.ts  editor-paste.ts  editor-renderer.ts  editor-source-mode.ts  editor-undo.ts  editor.ts  extension.ts  highlight.ts  index.ts  inline-patterns.ts  markdown.ts  serialize.ts  util.ts  wiki-image.ts
web/ts/editor/tests/: cursor-offset.test.ts  (+17 more)
(+1 files in other folders)
