[package]
name = "tansu2"
version = "0.1.0"
edition = "2024"

[dependencies]
httparse = "1"
lz4_flex = "0.11"
notify = "7"
pulldown-cmark = { version = "0.12", default-features = false }
rand = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tantivy = { version = "0.25", default-features = false, features = ["mmap", "lz4-compression"] }
toml = { version = "0.8", default-features = false, features = ["parse"] }
ts-rs = "12"

[dev-dependencies]
tempfile = "3"

[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 2

[[bin]]
name = "tansu2"
path = "src/main.rs"

[[bin]]
name = "gen-api-types"
path = "src/bin/gen-api-types.rs"
