[package]
name = "tansu2"
version = "0.1.0"
edition = "2024"

[dependencies]
fastrand = "2.4"
httparse = "1.10"
lz4_flex = "0.13"
pulldown-cmark = { version = "0.13", default-features = false }
rusqlite = { version = "0.39", features = ["modern_sqlite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
tantivy = { version = "0.26", default-features = false, features = ["mmap", "lz4-compression"] }
toml = { version = "1.1.2", default-features = false, features = ["parse", "serde"] }
ts-rs = "12.0"

[dev-dependencies]
tempfile = "3.27"

[target.'cfg(target_os = "macos")'.dependencies]
notify = { version = "8.2", default-features = false, features = ["macos_fsevent"] }

[target.'cfg(all(target_os = "linux", target_env = "musl"))'.dependencies]
notify = { version = "8.2", default-features = false }

[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "tansu2"
path = "src/main.rs"

[[bin]]
name = "gen-api-types"
path = "src/bin/gen-api-types.rs"

